added header menu done

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Fitness Assignment-2</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    
 </head>
 <body class="inter-font">
     <!-- header section start here-->
-    <header class="display-hide">
+    <header>
         <nav class="nav-bar">
             <div>
                 <h3 class="brand">Fitness</h3>
@@ -21,7 +23,7 @@
                 <button id="btn-4">About</button>
             </div>
             <div class="nav-hamburger-menu">
-                <img src="images/elementor.png" alt="">
+                <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
         <!-- banner section start here -->
