banner section done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </nav>
         <!-- banner section start here -->
-         <section class="banner display-hide">
+         <section class="banner">
             <div class="banner-container section">
                 <div class="banner-content">
                     <h1 class="banner-title">Get body in <span class="shape">shape</span> & stay healthy</h1>
@@ -38,6 +38,16 @@
                 </div>
                 <div class="banner-img">
                     <img src="images/images 1.png" alt="">
+                    <div class="group">
+                        <div class="rectangle-1">
+                            <h4 class="rectangle-1-h4">500+</h4>
+                            <p class="rectangle-1-description">Free Workout Videos</p>
+                        </div>
+                        <div class="rectangle-2">
+                            <h5 class="rectangle-2-h5">350+</h5>
+                            <p class="rectangle-2-description">Video tutorial</p>
+                        </div>
+                    </div>
                 </div>
             </div>
          </section>
