banner section responsive

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                         <div class="rectangle-2">
                             <h5 class="rectangle-2-h5">350+</h5>
                             <p class="rectangle-2-description">Video tutorial</p>
+                            <div>
+                                <button class="icon-video">
+                                    <i class="fa-solid fa-play"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
