feature section deone with responsive

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- main section start here-->
     <main>
         <!-- feature section start here -->
-         <section class="feature display-hide">
+         <section class="feature margin-top">
             <feature class="feature-container section">
                 <div class="feature-info">
                     <h2 class="feature-title title">Change Your Habits</h2>
@@ -104,7 +104,7 @@
          </section>
         <!-- feature section end here -->
         <!--  extra mile section start here -->
-          <section class="extra-mile display-hide">
+          <section class="extra-mile margin-top">
             <div class="extra-mile-container section">
                 <div class="content-extra-mail">
                     <h2 class="extra-mail-title">Run an Extra<br> Mile Easily</h2>
@@ -118,7 +118,7 @@
             </div>
           </section>
           <!-- Calculator section  start here -->
-           <section class="Calculator display-hide">
+           <section class="Calculator">
             <div class="Calculator-container section color">
                 <div class="content-Calculator">
                     <div class="Calculator-title">BMI Calculator</div>
@@ -191,7 +191,7 @@
           <!-- Calculator section end here -->
         <!--  extra mile section end here -->
         <!--  team section start here -->
-          <section class="team display-hide">
+          <section class="team">
             <div class="team-container section">
                 <div class="team-info">
                     <h2 class="team-title title">Meet Our Team</h2>
@@ -247,9 +247,9 @@
           </section>
         <!--  team section end here -->
         <!--  footer section start here -->
-          <div class="footer-main display-hide">
+          <div class="footer-main">
             <div class="footer-main-container section">
-                <div class="footer-info flex">
+                <div class="footer-info">
                     <div class="document">
                         <h2 class="document-title">Fitness</h2>
                         <p class="document-description">We believe fitness should be accessible to everyone, 
@@ -282,7 +282,7 @@
     <!-- main section end here-->
     <!-- footer section start -->
     <footer>
-        <div class="footer display-hide">
+        <div class="footer">
             <div class="span"></div>
             <p class="footer">All right reserved @Fitness 2024</p>
         </div>
